--- a/src/Resources/public/css/backend.scss
+++ b/src/Resources/public/css/backend.scss
@@ -245,6 +245,19 @@
       textarea{
         resize: vertical;
       }
+
+      fieldset{
+        margin: 13px 0 0;
+        padding-left: 12px;
+        padding-bottom: 10px;
+        box-shadow: none;
+        border-color: #e3e3e3;
+
+        legend{
+          margin-left: -16px;
+          padding-left: 3px;
+        }
+      }
     }
   }
 }
